--- a/index.html
+++ b/index.html
@@ -8,6 +8,22 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="logo">
+            <img src="img/logo.jpg" />
+            <p class="logo-caption">News</p>
+        </div>
+        <nav class="main-nav">
+            <a>Link</a>
+            <a>Link</a>
+            <a>Link</a>
+            <a>Link</a>
+        </nav>
+    </header>
+    <main>
+    </main>
+    <footer>
+        @copy 
+    </footer>
 </body>
 </html>
