--- a/index.html
+++ b/index.html
@@ -37,57 +37,57 @@
                 <img src="img/monster_red_upset.jpg" alt="Why is he so upset again?" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">Why is he so upset again?</h2>
-                    <p>Socko was found yesterday looking really upset again. "He's such a drama queen!" an anonymous source says to the MM.</p>
-                    <a href="" class="read-article-link">Read everything here!</a>
+                    <p>Socko was found yesterday looking really upset again. "He's such a drama queen!" an anonymous source says to the MM.
+                    <a href="" class="read-article-link">Read everything here!</a></p>
                 </div>
             </div>
             <div class="grid-item grid-item--3 grid-article-container">
                 <img src="img/weather.jpg" alt="Weather" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">All about the weather today</h2>
-                    <p>Sun? Rainbow? Or even snow? <a href="" class="read-article-link">Find out everything you need to know about the weather today.</a></p>
+                    <p>Sun? Rainbow? Or even snow? The best weather presenter ever, our very own Mr Hurk, never makes us disappointed. <a href="" class="read-article-link">Find out everything here.</a></p>
                 </div>
             </div>
             <div class="grid-item grid-item--4 grid-article-container">
                 <img src="img/monster_green_surprised.jpg" alt="Happy Lulu" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">Happy surprise!</h2>
-                    <p>What made Lulu so happy the other day. <a class="read-article-link">You will not believe it!</a></p>
+                    <p>What made Lulu so happy the other day. Some new prank from Prank? The new playground? Yes, of course, but also one other thing... <a class="read-article-link">You will not believe it!</a></p>
                 </div>
             </div>
             <div class="grid-item grid-item--5 grid-article-container">
                 <img src="img/monster_purple_happy.jpg" alt="New hair color" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">New hair color</h2>
-                    <p>Slob dyed her hair red yesterday. Cool isn't it? Thumbs up from the Monster Magazine. <a class="read-article-link">Read full article</a></p>
+                    <p>Slob dyed her hair red yesterday. Cool isn't it? Thumbs up from everyone at the Monster Magazine. <a class="read-article-link">Read full article.</a></p>
                 </div>
             </div>
             <div class="grid-item grid-item--6 grid-article-container">
                 <img src="img/monster_orange_happy.jpg" alt="Prank made a new prank" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">Prank seems to be satisfied</h2>
-                    <p>Should we be worried? Has she made a new prank? Who got affected? <a class="read-article-link">Get all the information</a></p>
+                    <p>Should we be worried? Has she made a new prank? Who got affected this time? <a class="read-article-link">Get all the information.</a></p>
                 </div>
             </div>
             <div class="grid-item grid-item--7 grid-article-container">
-                <img src="img/monster_green_grumpy.jpg" alt="Grumpy Gordon" class="grid-article-image" />
-                <div class="grid-article-text-container">
-                    <h2 class="grid-article-heading">Not satisfied!</h2>
-                    <p>Grumpy Gordon is complaining about the new playground. "Why can't they ever do anytning right?" he mutters. <a class="read-article-link">Read full article here</a></p>
-                </div>
-            </div>
-            <div class="grid-item grid-item--8 grid-article-container">
                 <img src="img/monster_blue_surprised.jpg" alt="Kiwi is happy and surprised" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">Happy and surprised</h2>
-                    <p>Kiwi is overwhelmed, the new playground is just super fantastic!! A trampoline! A rollercoaster! Even a space ship!! <a class="read-article-link">Everything you need to know here</a></p>
+                    <p>Kiwi is overwhelmed, the new playground is just super fantastic!! A trampoline! A rollercoaster! Even a space ship!! <a class="read-article-link">Everything you need to know here.</a></p>
+                </div>
+            </div>
+            <div class="grid-item grid-item--8 grid-article-container">
+                <img src="img/monster_green_grumpy.jpg" alt="Grumpy Gordon" class="grid-article-image" />
+                <div class="grid-article-text-container">
+                    <h2 class="grid-article-heading">Not satisfied!</h2>
+                    <p>Grumpy Gordon is complaining about the new playground. "Why can't they ever do anytning right?" he mutters. <a class="read-article-link">Read full article here.</a></p>
                 </div>
             </div>
             <div class="grid-item grid-item--9 grid-article-container">
                 <img src="img/monster_pink_happy.jpg" alt="Happy birthday Yip!" class="grid-article-image" />
                 <div class="grid-article-text-container">
                     <h2 class="grid-article-heading">Yip turns 250!</h2>
-                    <p>Today we all greet our friend Yip who turns 250 years old! "I'm happy", se smiles. Sure we can see that! Congratulations Yip! <a class="read-article-link">Read full article</a></p>
+                    <p>Today we all greet our friend Yip who turns 250 years old! "I'm happy", she smiles. Sure we can see that! Congratulations Yip! <a class="read-article-link">Read full article.</a></p>
                 </div>
             </div>
         </div>
